--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body{
-    background-color: #5163cb;
+body {
+    background-color: #020202;
+    color: rgb(255, 255, 255);
+    
 }
+
+.logo{
+ width: 25%;
+}
+
