--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
-body {
-    background-color: #020202;
-    color: rgb(255, 255, 255);
-    
+body{
+    background-color: #584f4f;
+    color: ffffff;
+}
+
+.cabeçalho{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.cabeçalho-item-lista{
+        display: inline-block;
+        margin: 016px;;
 }
 
 .logo{
- width: 25%;
+    width: 25%;
 }
-
