--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 body{
-    background-color: #584f4f;
-    color: ffffff;
+    background-color: #000000;
+    color: #ffffff;
 }
 
 .cabeçalho{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 26px;
 }
 
-.cabeçalho-item-lista{
+.cabeçalho-lista-item{
         display: inline-block;
-        margin: 016px;;
+        margin: 0 18px;
+        font-size: 24px;
 }
 
 .logo{
