--- a/style.css
+++ b/style.css
@@ -26,4 +26,11 @@ body{
 
     .escola{
         background-image: linear-gradient(#6d3eee, white);
+        justify-content: center;
+        align-items: center;
     }
+
+    .escola-div-conteudo{
+        width: 35%;
+    }
+
