--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    padding: 0%;
+    margin: 0%;
+}
+
 body{
     background-color: #6d3eee;
     color: #ffffff;
@@ -28,6 +33,7 @@ body{
         background-image: linear-gradient(#6d3eee, white);
         justify-content: center;
         align-items: center;
+        display: flex;
     }
 
     .escola-div-conteudo{
