--- a/style.css
+++ b/style.css
@@ -44,4 +44,7 @@ body{
             width: 25px;
         }
     
-
+.estudante-todos{
+    display: grid;
+    grid-template-columns 20% 20% 20% 20% 20%
+}
